# nvmep2

./: .clangd  .gitignore  .luacheckrc  .nvimlog  README.md  compile_commands.json  flake.nix  justfile  test.lua
.github/workflows/: ci.yml
nix/: mkNeovim.nix  neovim-overlay.nix
nvim/: init.lua
nvim/ftplugin/: bash.lua  c.lua  cpp.lua  fortran.lua  go.lua  haskell.lua  java.lua  javascript.lua  javascriptreact.lua  lua.lua  markdown.lua  php.lua  python.lua  r.lua  ruby.lua  sh.lua  typescript.lua  zig.lua
nvim/lua/user/: mac_option.lua  present.lua  utils.lua
nvim/plugin/: aerial.lua  artio.lua  autocommands.lua  codecompanion.lua  commands.lua  completion.lua  conform.lua  dashboard.lua  direnv-nvim.lua  flash.lua  focal.lua  focus.lua  fzf.lua  heirline.lua  hover.lua  image.lua  just.lua  justice.lua  keymaps.lua  leetcode.lua  lsp-progress.lua  lualine-nvim.lua  luasnip.lua  neogit.lua  neotest.lua  none-ls.lua  nvim-bqf.lua  nvim-dap-view.lua  nvim-dap-virtual-text.lua  nvim-java.lua  nvim-surround.lua  nvim-tree.lua  opencode.lua  orgmode.lua  ot_org-roam.lua  other.lua  overseer.lua  present.lua  quicker-nvim.lua  r.lua  (+8 more)
playground/: hello.lua
playground/bash/: test.bash
playground/cpp/: CMakeLists.txt  hello.cpp
playground/java/: flake.nix  settings.gradle.kts
playground/lua/: hello.lua
playground/python/: hello.py
tests/: minimal_init.lua  user_lsp_spec.lua  user_present_spec.lua  user_utils_spec.lua
